<resources>
    <string name="app_name">病害采集系统</string>
    <string name="menu_home">首页</string>
    <string name="menu_data">信息查询</string>
    <string name="menu_device">设备管理</string>
    <string name="menu_sort">排序</string>
    <string name="menu_screening">筛选</string>
    <string name="login_user">用户名</string>
    <string name="login_password">密码</string>
    <string name="forget_password"><u color="@color/BLUE">忘记密码?</u></string>
    <string name="remember_password">记住密码</string>
    <string name="menu_chart">数据分析</string>
    <string name="menu_setting">设置</string>
    <string name="Exit_App">再按一次退出</string>
    <string-array name="pest_kind">
        <item>棉铃虫</item>
        <item>介壳虫</item>
        <item>蝗虫</item>
        <item>小菜蛾</item>
        <item>纹白蝶</item>
        <item>松毛虫</item>
        <item>蜗牛</item>
        <item>马陆</item>
    </string-array>
    <string-array name="pest_data_type">
        <item>全部</item>
        <item>报警数据</item>
        <item>超限数据</item>
    </string-array>
    <string-array name="pest_device">
        <item>ok-1</item>
        <item>ok-2</item>
        <item>ok-3</item>
        <item>ok-4</item>
        <item>ok-5</item>
        <item>ok-6</item>
        <item>ok-7</item>
        <item>ok-8</item>
    </string-array>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
